# BitTicker

./: BitTicker.cabal  BitTicker.hs
src/: Main.hs
src/BitTicker/: Config.hs  Fetch.hs  Text.hs  Timer.hs  UI.hs  Util.hs
src/BitTicker/Ticker/: Mtgox.hs
