name:                BitTicker
version:             0.1.0.0
synopsis:            Personal Bitcoin Ticker
description:         Personal Bitcoin Ticker
homepage:            https://bitbucket.org/kinghajj/BitTicker
license:             BSD3
license-file:        LICENSE
author:              Sam Fredrickson
maintainer:          kinghajj@gmail.com
copyright:           (C) 2013 Sam Fredrickson
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

executable BitTicker
  main-is:             Main.hs
  other-modules:       BitTicker.UI, BitTicker.Ticker.Mtgox, BitTicker.Fetch,
                       BitTicker.Timer, BitTicker.Config
  build-depends:       base >=4.5, containers >=0.4, mtl >=2.1, lens >=3.8,
                       bytestring >= 0.9, text >=0.11, aeson >=0.6,
                       cmdargs >=0.10, gloss >=1.7, time >=1.4, old-time >=1.1,
                       process >=1.1, old-locale >=1.0, cond >=0.4
  buildable:           True
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables
  hs-source-dirs:      src
  ghc-options:         -Wall -O -threaded -rtsopts

source-repository head
  type: git
  location: git@bitbucket.org:kinghajj/RPN.git
